my second committ

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-1">
         <h1 class=>How to create an online resume</h1>
         <div class="btn">
-            <button>< Previous </button>
+            <button>< new </button>
            <button>Next ></button>
            
         </div>
